--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -3,6 +3,9 @@
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
 }
 
 .legal-header h1 {
@@ -11,7 +14,9 @@
   margin: 0 auto;
 }
 
-main {
+main {position: relative;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
 
 section {
@@ -28,8 +33,10 @@ section {
 .section-label {
   width: 100%;
   background-color: #2b2d3b;
-  height: max-content;
+  height: fit-content;
   padding: 10px 16px;
+  position: sticky;
+  top : 170px;
 }
 
 .document-content {
@@ -59,6 +66,8 @@ footer {
   background-color: #e2e2e2;
   padding: 0 30px;
   min-height: 70px;
+  position: fixed;
+  bottom: 0;
 }
 
 .footer-content {
@@ -69,6 +78,8 @@ footer {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+  position: fixed;
+  bottom: center;
 }
 
 .agree-btn {
@@ -80,6 +91,10 @@ footer {
   color: white;
   cursor: pointer;
   transition: all 0.4s ease-in-out;
+  position: fixed;
+  bottom: center;
+  right: 30px;
+
 }
 
 .agree-btn:disabled {
